--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,6 +18,18 @@
   </head>
 
   <body>
+    <%= render partial: "shared/nav_bar" %>
+    <div class="flash">
+      <p class="flash-notice"><%= notice %></p>
+      <p class="flash-alert"><%= alert %></p>
+    </div>
+    <div>
+      <% if current_user %>
+        <p>サインイン中のユーザー: <%= current_user.email %></p>
+      <% else %>
+        <p>誰もサインインしてません</p>
+      <% end %>
+    </div>
     <%= yield %>
   </body>
 </html>
