--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -25,7 +25,7 @@
     </div>
     <div>
       <% if current_user %>
-        <p>サインイン中のユーザー: <%= current_user.email %></p>
+        <p>サインイン中のユーザー: <%= current_user.username %></p>
       <% else %>
         <p>誰もサインインしてません</p>
       <% end %>
