--- a/app/views/shared/_nav_bar.html.erb
+++ b/app/views/shared/_nav_bar.html.erb
@@ -1,13 +1,31 @@
 <nav class="navbar">
+  <h1 class="navbar-title">Mini Blog</h1>
   <ul class="navbar-list">
     <li class="navbar-item">
-      <%= link_to "Home", root_path %>
+      <%= link_to "Posts" %>
     </li>
     <li class="navbar-item">
-      <%= link_to "Setting", edit_user_registration_path %>
+      <%= link_to "Users" %>
     </li>
-    <li class="navbar-item">
-      <%= link_to "Sign Out", destroy_user_session_path, data: { turbo_method: :delete } %>
-    </li>
+
+    <% if user_signed_in? %>
+      <li class="navbar-item">
+        <%# username which is adropdown which includes signout and setting link %>
+        <div class="dropdown">
+          <button class="dropbtn"><%= current_user.username %></button>
+          <div class="dropdown-content">
+            <%= link_to "Sign Out", destroy_user_session_path, data: { turbo_method: :delete } %>
+            <%= link_to "Setting", edit_user_registration_path %>
+          </div>
+        </div>
+      </li>
+    <% else %>
+      <li class="navbar-item">
+        <%= link_to "Sign In", new_user_session_path %>
+      </li>
+      <li class="navbar-item">
+        <%= link_to "Sign Up", new_user_registration_path %>
+      </li>
+    <% end %>
   </ul>
 </nav>
