--- a/app/views/layouts/_nav_bar.html.erb
+++ b/app/views/layouts/_nav_bar.html.erb
@@ -2,7 +2,7 @@
   <h1 class="navbar-title">Mini Blog</h1>
   <ul class="navbar-list">
     <li class="navbar-item">
-      <%= link_to "Posts" %>
+      <%= link_to "Home", root_path %>
     </li>
     <li class="navbar-item">
       <%= link_to "Users" %>
