locale日本語化 & seed追加 & validation追加

--- a/app/views/shared/_tweet.html.erb
+++ b/app/views/shared/_tweet.html.erb
@@ -1,7 +1,7 @@
 <div class="tweet-container">
   <p class="tweet-username"><%= tweet.user.username %></p>
   <p class="tweet-content"><%= tweet.content %></p>
-  <p class="tweet-timestamp"><%= tweet.created_at.strftime("%B %e, %Y at %l:%M %p") %></p>
+  <p class="tweet-timestamp"><%= l tweet.created_at %></p>
   <div class="tweet-actions">
     <p class="tweet-back-link"><%= link_to "Home", tweets_path %></p>
 
