--- a/app/views/tweets/new.html.erb
+++ b/app/views/tweets/new.html.erb
@@ -2,6 +2,18 @@
 
 <h1>New tweet</h1>
 
+<% if @tweet.errors.any? %>
+  <div id="error_explanation">
+    <h2><%= pluralize(@tweet.errors.count, "error") %></h2>
+
+    <ul>
+      <% @tweet.errors.each do |error| %>
+        <li><%= error.full_message %></li>
+      <% end %>
+    </ul>
+  </div>
+<% end %>
+
 <%= form_with model: @tweet, local: true do |f| %>
   <div>
     <%= f.label :content %><br>
