users#index/#show/#edit/#updateを追加

--- a/app/views/layouts/_nav_bar.html.erb
+++ b/app/views/layouts/_nav_bar.html.erb
@@ -5,7 +5,7 @@
       <%= link_to "Home", root_path %>
     </li>
     <li class="navbar-item">
-      <%= link_to "Users" %>
+      <%= link_to "Users", users_path %>
     </li>
 
     <% if user_signed_in? %>
@@ -14,8 +14,9 @@
         <div class="dropdown">
           <button class="dropbtn"><%= current_user.username %></button>
           <div class="dropdown-content">
-            <%= link_to "Sign Out", destroy_user_session_path, data: { turbo_method: :delete } %>
+            <%= link_to "Profile", current_user %>
             <%= link_to "Setting", edit_user_registration_path %>
+            <%= link_to "Sign Out", destroy_user_session_path, data: { turbo_method: :delete } %>
           </div>
         </div>
       </li>
