--- a/app/views/shared/_tweet.html.erb
+++ b/app/views/shared/_tweet.html.erb
@@ -5,7 +5,7 @@
   <div class="tweet-actions">
     <p class="tweet-back-link"><%= link_to "Home", tweets_path %></p>
 
-    <% if owner?(tweet) %>
+    <% if tweet_owner?(tweet) %>
       <p class="tweet-edit-link"><%= link_to "Edit", edit_tweet_path(tweet) %></p>
       <p class="tweet-delete-button"><%= link_to "Delete", tweet, data: { turbo_method: :delete }  %></p>
     <% end %>
