--- a/app/assets/stylesheets/tweet.scss
+++ b/app/assets/stylesheets/tweet.scss
@@ -9,6 +9,7 @@
 }
 
 .tweet-username {
+  text-decoration: none;
   font-weight: bold;
   color: #14171a;
   margin-bottom: 8px;
@@ -61,4 +62,55 @@
 
 .tweet-delete-button button:hover {
   background-color: #c21c50;
+}
+
+.tweet-user-link {
+  display: flex;
+  align-items: center;
+  text-decoration: none;
+  font-weight: bold;
+  color: inherit;
+
+  &:hover {
+    box-shadow: inset 0 -1px 0 0 #ddd;
+  }
+
+  .tweet-user-icon {
+    margin-right: 8px;
+  }
+
+  .icon-placeholder {
+    width: 32px;
+    height: 32px;
+    border-radius: 50%;
+    object-fit: cover;
+    background-color: #ddd;
+  }
+}
+
+.new-tweet-icon {
+  position: fixed;
+  right: 20px;
+  bottom: 20px;
+  width: 56px;
+  height: 56px;
+  background-color: #0180ff;
+  border-radius: 50%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-decoration: none;
+  color: white;
+  font-size: 24px;
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+  transition: background-color 0.3s ease;
+
+  &:hover {
+    background-color: #3d9eff;
+  }
+
+  span {
+    display: block;
+    line-height: 1;
+  }
 }
