--- a/app/views/shared/_tweet.html.erb
+++ b/app/views/shared/_tweet.html.erb
@@ -1,9 +1,14 @@
 <div class="tweet-container">
-  <p class="tweet-username"><%= tweet.user.username %></p>
+
+  <%= link_to user_path(tweet.user), class: "tweet-user-link" do %>
+    <div class="tweet-user-icon">
+      <%= image_tag 'user_icon.png', alt: 'User Icon', class: 'icon-placeholder' %>
+    </div>
+    <%= tweet.user.username %>
+  <% end %>
   <p class="tweet-content"><%= tweet.content %></p>
   <p class="tweet-timestamp"><%= l tweet.created_at %></p>
   <div class="tweet-actions">
-    <p class="tweet-back-link"><%= link_to "Home", tweets_path %></p>
 
     <% if tweet_owner?(tweet) %>
       <p class="tweet-edit-link"><%= link_to "Edit", edit_tweet_path(tweet) %></p>
