--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -2,6 +2,6 @@
 
 <div class="user-tweets">
   <% @user.tweets.each do |tweet| %>
-    <%= render 'shared/tweet', tweet: tweet %>
+    <%= render 'tweets/tweet', tweet: tweet %>
   <% end %>
 </div>
