--- a/app/views/tweets/_tweet.html.erb
+++ b/app/views/tweets/_tweet.html.erb
@@ -1,18 +1,21 @@
-<div id="<%= dom_id tweet %>" class="tweet-container">
+<%= turbo_frame_tag tweet do %>
+  <div class="tweet-container show">
 
-  <%= link_to user_path(tweet.user), class: "tweet-user-link" do %>
-    <div class="tweet-user-icon">
-      <%= image_tag 'user_icon.png', alt: 'User Icon', class: 'icon-placeholder' %>
+    <div class="tweet-header-container">
+      <%= link_to user_path(tweet.user), data: {turbo: false}, class: "tweet-user-link" do %>
+        <div class="tweet-user-icon">
+          <%= image_tag 'user_icon.png', alt: 'User Icon', class: 'icon-placeholder' %>
+        </div>
+        <%= tweet.user.username %>
+      <% end %>
+      <% if tweet_owner?(tweet) %>
+        <div class="tweet-actions">
+          <%= link_to "編集", edit_tweet_path(tweet), class: "edit-button" %>
+          <%= link_to "削除", tweet, data: { turbo_method: :delete }, class: "delete-button"  %>
+        </div>
+      <% end %>
     </div>
-    <%= tweet.user.username %>
-  <% end %>
-  <p class="tweet-content"><%= tweet.content %></p>
-  <p class="tweet-timestamp"><%= l tweet.created_at %></p>
-  <div class="tweet-actions">
-
-    <% if tweet_owner?(tweet) %>
-      <p class="tweet-edit-link"><%= link_to "Edit", edit_tweet_path(tweet) %></p>
-      <p class="tweet-delete-button"><%= link_to "Delete", tweet, data: { turbo_method: :delete }  %></p>
-    <% end %>
+    <p class="tweet-content"><%= tweet.content %></p>
+    <p class="tweet-timestamp"><%= l tweet.created_at %></p>
   </div>
-</div>
+<% end %>
