--- a/app/views/layouts/_nav_bar.html.erb
+++ b/app/views/layouts/_nav_bar.html.erb
@@ -1,32 +1,41 @@
-<nav class="navbar">
-  <h1 class="navbar-title">Mini Blog</h1>
-  <ul class="navbar-list">
-    <li class="navbar-item">
-      <%= link_to "Home", root_path %>
-    </li>
-    <li class="navbar-item">
-      <%= link_to "Users", users_path %>
-    </li>
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
+  <div class="container-fluid">
+    <%= link_to "Mini Blog", root_path, class: "navbar-brand" %>
 
-    <% if user_signed_in? %>
-      <li class="navbar-item">
-        <%# username which is adropdown which includes signout and setting link %>
-        <div class="dropdown">
-          <button class="dropbtn"><%= current_user.username %></button>
-          <div class="dropdown-content">
-            <%= link_to "Profile", current_user %>
-            <%= link_to "Setting", edit_user_registration_path %>
-            <%= link_to "Sign Out", destroy_user_session_path, data: { turbo_method: :delete } %>
-          </div>
-        </div>
-      </li>
-    <% else %>
-      <li class="navbar-item">
-        <%= link_to "Sign In", new_user_session_path %>
-      </li>
-      <li class="navbar-item">
-        <%= link_to "Sign Up", new_user_registration_path %>
-      </li>
-    <% end %>
-  </ul>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+
+    <div class="collapse navbar-collapse" id="navbarNav">
+      <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+        <li class="nav-item">
+          <%= link_to "Home", root_path, class: "nav-link" %>
+        </li>
+        <li class="nav-item">
+          <%= link_to "Users", users_path, class: "nav-link" %>
+        </li>
+
+        <% if user_signed_in? %>
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+              <%= current_user.username %>
+            </a>
+            <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdown">
+              <li><%= link_to "Profile", current_user, class: "dropdown-item" %></li>
+              <li><%= link_to "Setting", edit_user_registration_path, class: "dropdown-item" %></li>
+              <li><hr class="dropdown-divider"></li>
+              <li><%= link_to "Sign Out", destroy_user_session_path, data: { turbo_method: :delete }, class: "dropdown-item" %></li>
+            </ul>
+          </li>
+        <% else %>
+          <li class="nav-item">
+            <%= link_to "Sign In", new_user_session_path, class: "nav-link" %>
+          </li>
+          <li class="nav-item">
+            <%= link_to "Sign Up", new_user_registration_path, class: "nav-link" %>
+          </li>
+        <% end %>
+      </ul>
+    </div>
+  </div>
 </nav>
