--- a/app/views/shared/_user.html.erb
+++ b/app/views/shared/_user.html.erb
@@ -1,13 +1,14 @@
-<!-- app/views/user/_user.html.erb -->
-<a href="<%= user_path(user) %>" class="user-card-link">
-  <div class="user-card">
-    <div class="user-icon">
-      <%= image_tag 'user_icon.png', alt: 'User Icon', class: 'icon-placeholder' %>
-    </div>
+<a href="<%= user_path(user) %>" class="text-decoration-none">
+  <div class="card h-100 shadow-sm">
+    <div class="card-body d-flex align-items-center">
+      <div class=" me-3">
+        <%= image_tag 'user_icon.png', alt: 'User Icon', class: 'rounded-circle', size: "50x50" %>
+      </div>
 
-    <div class="user-info">
-      <h2 class="user-name"><%= user.username %></h2>
-      <p class="user-profile"><%= truncate(user.profile_message, length: 200) %></p>
+      <div>
+        <h2 class="h5 mb-1"><%= user.username %></h2>
+        <p class="text-muted small"><%= truncate(user.profile_message, length: 200) %></p>
+      </div>
     </div>
   </div>
 </a>
