--- a/app/views/tweets/_form.html.erb
+++ b/app/views/tweets/_form.html.erb
@@ -1,12 +1,13 @@
 <%= turbo_frame_tag tweet do %>
+  <%= form_with(model: tweet, local: true, class: "form-group") do |form| %>
+    <div class="card p-3 mb-3 shadow-sm">
+      <div class="mb-3">
+        <%= form.text_area :content, class: "form-control", rows: 4 %> <!-- Bootstrapのform-controlを使用 -->
+      </div>
 
-  <%= form_with(model: tweet) do |form| %>
-    <div class="tweet-container edit">
-      <%= form.text_area :content %>
       <% if tweet.errors.any? %>
-        <div style="color: red">
-          <h2><%= pluralize(tweet.errors.count, "error") %> prohibited this tweet from being saved:</h2>
-
+        <div class="alert alert-danger">
+          <h4 class="alert-heading"><%= pluralize(tweet.errors.count, "error") %> prohibited this tweet from being saved:</h4>
           <ul>
             <% tweet.errors.each do |error| %>
               <li><%= error.full_message %></li>
@@ -14,11 +15,11 @@
           </ul>
         </div>
       <% end %>
-      <div class="tweet-actions">
-        <%= link_to "キャンセル", tweet, class: "cancel-button" %>
-        <%= form.submit class: "submit-button" %>
+
+      <div class="d-flex justify-content-between">
+        <%= link_to "キャンセル", tweet, class: "btn btn-secondary" %> <!-- Bootstrapのbtn-secondaryを使用 -->
+        <%= form.submit "保存", class: "btn btn-primary" %> <!-- Bootstrapのbtn-primaryを使用 -->
       </div>
     </div>
-
   <% end %>
 <% end %>
