--- a/app/views/tweets/_tweet.html.erb
+++ b/app/views/tweets/_tweet.html.erb
@@ -1,21 +1,24 @@
 <%= turbo_frame_tag tweet do %>
-  <div class="tweet-container show">
+  <div class="card mb-3 shadow-sm">
+    <div class="card-body">
+      <div class="d-flex justify-content-between align-items-center">
+        <%= link_to user_path(tweet.user), data: {turbo: false}, class: "d-flex align-items-center" do %>
+          <div class="me-2">
+            <%= image_tag 'user_icon.png', alt: 'User Icon', class: 'rounded-circle', size: "40x40" %>
+          </div>
+          <strong><%= tweet.user.username %></strong>
+        <% end %>
 
-    <div class="tweet-header-container">
-      <%= link_to user_path(tweet.user), data: {turbo: false}, class: "tweet-user-link" do %>
-        <div class="tweet-user-icon">
-          <%= image_tag 'user_icon.png', alt: 'User Icon', class: 'icon-placeholder' %>
-        </div>
-        <%= tweet.user.username %>
-      <% end %>
-      <% if tweet_owner?(tweet) %>
-        <div class="tweet-actions">
-          <%= link_to "編集", edit_tweet_path(tweet), class: "edit-button" %>
-          <%= link_to "削除", tweet, data: { turbo_method: :delete }, class: "delete-button"  %>
-        </div>
-      <% end %>
+        <% if tweet_owner?(tweet) %>
+          <div>
+            <%= link_to "編集", edit_tweet_path(tweet), class: "btn btn-sm btn-outline-primary me-2" %>
+            <%= link_to "削除", tweet, data: { turbo_method: :delete }, class: "btn btn-sm btn-outline-danger" %>
+          </div>
+        <% end %>
+      </div>
+
+      <p class="mt-3"><%= tweet.content %></p>
+      <p class="text-muted small"><%= l tweet.created_at %></p>
     </div>
-    <p class="tweet-content"><%= tweet.content %></p>
-    <p class="tweet-timestamp"><%= l tweet.created_at %></p>
   </div>
 <% end %>
