--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,27 +1,30 @@
-<div class="edit-user-container">
+<div class="container">
   <%= render partial: "shared/error_messages", locals: { object: @user } %>
-  <h1 class="profile-edit-header">プロフィールの編集</h1>
-  <%= form_with(model: @user, class: "profile-edit-form") do |f| %>
-    <div class="field profile-message-field">
-      <%= f.label :profile_message, class: "profile-message-label" %>
-      <%= f.text_area :profile_message, class: "profile-message-textarea" %>
+
+  <h1 class="mb-4">プロフィールの編集</h1>
+
+  <%= form_with(model: @user) do |f| %>
+    <div class="mb-3">
+      <%= f.label :profile_message, class: "form-label" %>
+      <%= f.text_area :profile_message, class: "form-control", rows: 5 %>
     </div>
 
-    <div class="user-blogs-section">
-      <h2>SNSリンク</h2>
+    <div class="mb-4">
+      <h2 class="h5 mb-3">SNSリンク</h2>
+
       <%= f.fields_for :user_blogs do |ff| %>
-        <div class="user-blog-field">
-          <div class="blog-kind-field">
-            <%= ff.select :kind, options_for_select([nil] + UserBlog::KINDS, ff.object.kind), {}, { class: "blog-kind-select" } %>
+        <div class="row g-2 mb-3">
+          <div class="col-md-2">
+            <%= ff.select :kind, options_for_select([nil] + UserBlog::KINDS, ff.object.kind), {}, { class: "form-select" } %>
           </div>
 
-          <div class="blog-url-field">
-            <%= ff.text_field :url, class: "blog-url-textfield" %>
+          <div class="col-md-10">
+            <%= ff.text_field :url, class: "form-control", placeholder: "URLを入力" %>
           </div>
         </div>
       <% end %>
     </div>
 
-    <%= f.submit "Save", class: "profile-edit-submit" %>
+    <%= f.submit "Save", class: "btn btn-primary" %>
   <% end %>
 </div>
