--- a/app/views/tweets/_tweet.html.erb
+++ b/app/views/tweets/_tweet.html.erb
@@ -1,6 +1,7 @@
 <%= turbo_frame_tag tweet do %>
   <div class="card mb-3 shadow-sm">
     <div class="card-body">
+      <%# ユーザー / 編集ボタン / 削除ボタン %>
       <div class="d-flex justify-content-between align-items-center">
         <%= link_to user_path(tweet.user), data: {turbo: false}, class: "d-flex align-items-center" do %>
           <div class="me-2">
@@ -19,6 +20,22 @@
 
       <p class="mt-3"><%= tweet.content %></p>
       <p class="text-muted small"><%= l tweet.created_at %></p>
+
+      <%# like / reply %>
+      <div class="d-flex justify-content-between align-items-center mt-3">
+        <% if user_signed_in? %>
+          <div class="d-flex align-items-center">
+            <%= turbo_frame_tag "like_#{tweet.id}" do %>
+              <%= render partial: 'tweets/like_button', locals: { tweet: tweet } %>
+            <% end %>
+          </div>
+        <% else %>
+          <div class="d-flex align-items-center">
+            <%= icon('fa-regular', 'heart', class: 'me-1') %>
+            <%= tweet.likes.size %>
+          </div>
+        <% end %>
+      </div>
     </div>
   </div>
 <% end %>
