--- a/app/views/users/shared/_error_messages.html.erb
+++ b/app/views/users/shared/_error_messages.html.erb
@@ -2,7 +2,7 @@
   <div id="error_explanation" data-turbo-cache="false">
     <h2>
       <%= I18n.t("errors.messages.not_saved",
-                 count: resource.errors.count,
+                 count: resource.errors.size,
                  resource: resource.class.model_name.human.downcase)
        %>
     </h2>
