--- a/app/views/tweets/show.html.erb
+++ b/app/views/tweets/show.html.erb
@@ -1,1 +1,6 @@
-<%= render @tweet %>
+<div class="container p-0">
+  <%= render @tweet %>
+  <div class="container ps-4  border-start border-2">
+    <%= render @children %>
+  </div>
+</div>
