--- a/app/views/shared/_user.html.erb
+++ b/app/views/shared/_user.html.erb
@@ -1,4 +1,5 @@
-<a href="<%= user_path(user) %>" class="text-decoration-none">
+
+<%= link_to user_path(user), class: "text-decoration-none" do %>
   <div class="card h-100 shadow-sm">
     <div class="card-body d-flex align-items-center">
       <div class=" me-3">
@@ -11,4 +12,4 @@
       </div>
     </div>
   </div>
-</a>
+<% end %>
