--- a/app/views/tweets/_form.html.erb
+++ b/app/views/tweets/_form.html.erb
@@ -2,7 +2,7 @@
   <%= form_with(model: tweet, local: true, class: "form-group") do |form| %>
     <div class="card p-3 mb-3 shadow-sm">
       <div class="mb-3">
-        <%= form.text_area :content, class: "form-control", rows: 4 %> <!-- Bootstrapのform-controlを使用 -->
+        <%= form.text_area :content, class: "form-control", rows: 4 %>
       </div>
 
       <% if tweet.errors.any? %>
@@ -17,8 +17,8 @@
       <% end %>
 
       <div class="d-flex justify-content-between">
-        <%= link_to "キャンセル", tweet, class: "btn btn-secondary" %> <!-- Bootstrapのbtn-secondaryを使用 -->
-        <%= form.submit "保存", class: "btn btn-primary" %> <!-- Bootstrapのbtn-primaryを使用 -->
+        <%= link_to "キャンセル", tweet, class: "btn btn-secondary" %>
+        <%= form.submit "保存", class: "btn btn-primary" %>
       </div>
     </div>
   <% end %>
