--- a/app/views/tweets/_tweet.html.erb
+++ b/app/views/tweets/_tweet.html.erb
@@ -1,5 +1,10 @@
 <%= turbo_frame_tag tweet do %>
   <div class="card mb-3 shadow-sm">
+    <% if tweet.parent_id.present? %>
+      <div class="card-header">
+        <%= icon("fa-solid", "reply") %> 返信先: <%= link_to tweet.parent.user.username, tweet.parent.user %>
+      </div>
+    <% end %>
     <div class="card-body">
       <%# ユーザー / 編集ボタン / 削除ボタン %>
       <div class="d-flex justify-content-between align-items-center">
@@ -21,20 +26,19 @@
       <p class="mt-3"><%= tweet.content %></p>
       <p class="text-muted small"><%= l tweet.created_at %></p>
 
-      <%# like / reply %>
-      <div class="d-flex justify-content-between align-items-center mt-3">
-        <% if user_signed_in? %>
-          <div class="d-flex align-items-center">
-            <%= turbo_frame_tag "like_#{tweet.id}" do %>
-              <%= render partial: 'tweets/like_button', locals: { tweet: tweet } %>
-            <% end %>
-          </div>
-        <% else %>
-          <div class="d-flex align-items-center">
-            <%= icon('fa-regular', 'heart', class: 'me-1') %>
-            <%= tweet.likes.size %>
-          </div>
-        <% end %>
+      <%# reply / show / like %>
+      <div class="d-flex justify-content-start gap-2 align-items-center mt-3">
+        <%###### replyボタン ######%>
+        <%= link_to icon("fa-solid", "reply"), new_reply_tweet_path(tweet), data: { turbo: "false" } if user_signed_in? %>
+        <%###### showボタン ######%>
+        <%= link_to icon("fa-regular", "message"), tweet_path(tweet), data: { turbo: "false" } %>
+        <%= tweet.children.size %>
+        <%###### いいねボタン ######%>
+        <div class="d-flex align-items-center">
+          <%= turbo_frame_tag "like_#{tweet.id}" do %>
+            <%= render partial: 'tweets/like_button', locals: { tweet: tweet } %>
+          <% end %>
+        </div>
       </div>
     </div>
   </div>
