--- a/app/views/tweets/new.html.erb
+++ b/app/views/tweets/new.html.erb
@@ -1,32 +1,13 @@
 <% content_for :title, "New tweet" %>
 
-<h1>New tweet</h1>
+<div class="container">
+  <h1 class="display-4">New tweet</h1>
 
-<% if @tweet.errors.any? %>
-  <div id="error_explanation">
-    <h2><%= pluralize(@tweet.errors.size, "error") %></h2>
+  <%= render 'tweet_form', tweet: @tweet %>
 
-    <ul>
-      <% @tweet.errors.each do |error| %>
-        <li><%= error.full_message %></li>
-      <% end %>
-    </ul>
-  </div>
-<% end %>
-
-<%= form_with model: @tweet, local: true do |f| %>
-  <div>
-    <%= f.label :content %><br>
-    <%= f.text_area :content %>
-  </div>
+  <br>
 
   <div>
-    <%= f.submit %>
+    <%= link_to "Back to tweets", tweets_path, class: "btn btn-secondary" %>
   </div>
-<% end %>
-
-<br>
-
-<div>
-  <%= link_to "Back to tweets", tweets_path %>
 </div>
