無限スクロールのバグ修正

--- a/app/views/tweets/index.html.erb
+++ b/app/views/tweets/index.html.erb
@@ -48,7 +48,7 @@
       <%= turbo_frame_tag "tweets-page-#{@tweets.current_page}" do %>
         <%= render @tweets %>
 
-        <%= turbo_frame_tag "tweets-page-#{@tweets.next_page}", loading: :lazy, src: path_to_next_page(@tweets), class: "lazy-load" %>
+        <%= turbo_frame_tag "tweets-page-#{@tweets.next_page}", loading: :lazy, src: path_to_next_page(@tweets), class: "lazy-load", style: "padding: 1px;" %>
       <% end %>
     </div>
   <% end %>
